# Tether

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: wgpu_native.pc.in  wgpu_nativeConfig.cmake.in
include/: tether.h
src/: tether.c
src/backends/: tether_backend.c  tether_hal.h  tether_raster.h
src/backends/hal/: sokol_hal.c
src/backends/raster/: thorvg_raster.c
tests/: sandbox_main.c
